...
    <string name="attendance_tab_board">게시판</string>
    <string name="attendance_tab_my">My</string>
    <string name="attendance_demo_data">화면 확인용 데모 데이터</string>
    <string name="attendance_demo_status">데모</string>
    <string name="attendance_home_title">YAPP</string>
    <string name="attendance_home_notifications">알림</string>
    <string name="attendance_home_session_label">이번주 세션</string>
    <string name="attendance_home_session_title">오늘은 10월 1일\n개발-디자인 세션이에요</string>
    <string name="attendance_home_session_action">출석하기</string>
    <string name="attendance_home_history_title">최근 출석 현황</string>
    <string name="attendance_home_history_session">개발·디자인 세션</string>
    <string name="attendance_home_history_date">9월 26일</string>
    <string name="attendance_schedule_title">일정</string>
...
